--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </header>
             
             <form>
-                <label class="todo-input-label">❯</label>
+                <label class="todo-input-label hidden">❯</label>
                 <input type="text" placeholder="What needs to be done?" class="input">
                 <ul class="todo-list">
                     <!-- <li>
@@ -48,9 +48,13 @@
                 <ul class="todo-menu-list">
                     <li><a href="#/all" class="all selected">All</a></li>
                     <li><a href="#/active" class="active">Active</a></li>
-                    <li><a href="#/complited" class="complited">Complited</a></li>
+                    <li><a href="#/complited" class="complite">Complited</a></li>
                 </ul>
                 <div class="clear-complited hidden">Clear complited</div>
+            </div>
+            <div class="todo-menu-after hidden">
+                <div class="todo-menu-after-1"></div>
+                <div class="todo-menu-after-2"></div>
             </div>
 
             <footer class="info">
